--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -1,4 +1,4 @@
-@import url("//fonts.googleapis.com/css?family=sans-serif");
+@import url("//fonts.googleapis.com/css?family=Open Sans");
 /*!
  * bootswatch v3.3.2
  * Homepage: http://bootswatch.com
@@ -8,7 +8,7 @@
 */
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
 html {
-  font-family: sans-serif;
+  font-family: Open Sans;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 }
@@ -1072,7 +1072,7 @@ html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 body {
-  font-family: "sans-serif", Tahoma, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Open Sans", Tahoma, "Helvetica Neue", Helvetica, Arial, Open Sans;
   font-size: 14px;
   line-height: 1.42857143;
   color: #333333;
@@ -1171,7 +1171,7 @@ h6,
 .h4,
 .h5,
 .h6 {
-  font-family: "sans-serif", Tahoma, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Open Sans", Tahoma, "Helvetica Neue", Helvetica, Arial, Open Sans;
   font-weight: 500;
   line-height: 1.1;
   color: inherit;
@@ -5823,7 +5823,7 @@ button.close {
   z-index: 1070;
   display: block;
   visibility: visible;
-  font-family: "sans-serif", Tahoma, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Open Sans", Tahoma, "Helvetica Neue", Helvetica, Arial, Open Sans;
   font-size: 12px;
   font-weight: normal;
   line-height: 1.4;
@@ -5930,7 +5930,7 @@ button.close {
   display: none;
   max-width: 276px;
   padding: 1px;
-  font-family: "sans-serif", Tahoma, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Open Sans", Tahoma, "Helvetica Neue", Helvetica, Arial, Open Sans;
   font-size: 14px;
   font-weight: normal;
   line-height: 1.42857143;
