--- a/public/css/guests-home.css
+++ b/public/css/guests-home.css
@@ -14,3 +14,12 @@
 .welcome-banner {
   padding-top: 30px;
 }
+
+.jumbotron-title {
+  margin-top:80px;
+  text-align: center;
+}
+
+#petition_body {
+  text-align: justify;
+}
