Vectorized a cute picture for the 404 page, made the page template and added its styling to the css file.

--- a/public/css/guests-home.css
+++ b/public/css/guests-home.css
@@ -55,3 +55,14 @@
   display: block;
   margin-bottom: 20px;
 }
+
+#error {
+   background-color: white;
+}
+
+#error * {
+  margin-top: 200px;
+  float: none;
+  display: table-cell;
+  vertical-align: bottom;
+}
