--- a/public/css/actionite.css
+++ b/public/css/actionite.css
@@ -7,12 +7,16 @@
 }
 
 .welcome {
-    padding-bottom: 0;
-    padding-top: 50px;
+  padding-bottom: 0;
+  padding-top: 50px;
 }
 
 .welcome-banner {
   padding-top: 30px;
+}
+
+.navbar-spacer {
+    padding-top: 4em;
 }
 
 .jumbotron-title {
