--- a/public/css/actionite.css
+++ b/public/css/actionite.css
@@ -1,5 +1,5 @@
 .campaign-abstract {
-    margin-left: 5px;    
+    margin-left: 5px;
 }
 
 .campaign-box {
@@ -28,7 +28,7 @@
   text-align: justify;
 }
 
-.donation-next-btn-header, 
+.donation-next-btn-header,
 .donation-submit-header {
   font-family: Open Sans !important;
 }
@@ -69,4 +69,10 @@
   float: none;
   display: table-cell;
   vertical-align: bottom;
+}
+
+#validation-error {
+  font-size: 0.9em;
+  color: red;
+  font-style: italic;
 }
