--- a/public/css/actionite.css
+++ b/public/css/actionite.css
@@ -76,3 +76,9 @@
   color: red;
   font-style: italic;
 }
+
+#logo-navbar {
+  margin: 0 20px 0 0;
+  padding: 3px 12px;
+  background-color: white;
+}
