--- a/public/css/actionite.css
+++ b/public/css/actionite.css
@@ -110,10 +110,34 @@ html,body{
   width: 100%;
 }
 
-footer {
-  width:100%;
-  margin-top: 100px;
-  padding-top: 45px;
-  padding-bottom: 45px;
+/*CSS FOR STICKY FOOTER*/
+
+#wrap {
+  min-height: 100%;
+}
+
+#main {
+  overflow:auto;
+  padding-bottom: 250px;
+  }  /* must be same height as the footer */
+
+#footer {
+  position: relative;
+  margin-top: -150px; /* negative value of footer height */
+  height: 150px;
+  clear:both;
   border-top: 2px dashed #AE3910;
+} 
+
+#footer .row {
+  margin-top:40px;
+}
+
+/*Opera Fix*/
+body:before {
+  content:"";
+  height:100%;
+  float:left;
+  width:0;
+  margin-top:-32767px;/
 }
