--- a/public/css/actionite.css
+++ b/public/css/actionite.css
@@ -141,3 +141,13 @@ body:before {
   width:0;
   margin-top:-32767px;/
 }
+
+/*STYLING FOR IMAGE CROPPER IN PETITION/DONATION CREATION*/
+#image_preview {
+  overflow: hidden;
+  height: 350px;
+}
+
+#image_preview * {
+  max-height: 100%;
+}
